--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "command": "bash",
             "args": [
                 "-c",
-                "/usr/bin/g++-14 -std=c++23 -fdiagnostics-color=always -g \"${file}\" \"${fileDirname}/../lib\"/*.cpp -o \"${fileDirname}/${fileBasenameNoExtension}\""
+                "/usr/bin/g++-14 -std=c++23 -fdiagnostics-color=always -g \"${file}\" \"${fileDirname}/../lib\"/*.cpp -o \"${fileDirname}/${fileBasenameNoExtension}\" -mconsole"
             ],
             "options": {
                 "cwd": "${fileDirname}"
@@ -24,7 +24,7 @@
             "command": "bash",
             "args": [
                 "-c",
-                "/usr/bin/g++-14 -std=c++23 -fdiagnostics-color=always -g \"${file}\" \"${fileDirname}/../mock\"/*.cpp -o \"${fileDirname}/${fileBasenameNoExtension}\""
+                "/usr/bin/g++-14 -std=c++23 -mconsole -fdiagnostics-color=always -g \"${file}\" \"${fileDirname}/../mock\"/*.cpp -o \"${fileDirname}/${fileBasenameNoExtension}\""
             ],
             "options": {
                 "cwd": "${fileDirname}"
@@ -41,7 +41,7 @@
             "command": "bash",
             "args": [
                 "-c",
-                "/usr/bin/g++-14 -std=c++23 -fdiagnostics-color=always -g $(find . -name '*.cpp') -o \"${fileDirname}/${fileBasenameNoExtension}\""
+                "/usr/bin/g++-14 -std=c++23 -fdiagnostics-color=always -g $(find . -name '*.cpp') -o \"${fileDirname}/${fileBasenameNoExtension}\"-mconsole"
             ],
             "options": {
                 "cwd": "${workspaceFolder}"
@@ -62,9 +62,11 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
+                "-std=c++23",
                 "${file}",
                 "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
+                "${fileDirname}/${fileBasenameNoExtension}",
+                "-mconsole"
             ],
             "options": {
                 "cwd": "${fileDirname}"
