--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,7 +80,19 @@
         "xmemory": "cpp",
         "xstring": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "csignal": "cpp",
+        "cstring": "cpp",
+        "filesystem": "cpp",
+        "fstream": "cpp",
+        "ios": "cpp",
+        "locale": "cpp",
+        "ranges": "cpp",
+        "unordered_set": "cpp",
+        "valarray": "cpp",
+        "xfacet": "cpp",
+        "xlocinfo": "cpp",
+        "xtr1common": "cpp"
     },
     "python-envs.defaultEnvManager": "ms-python.python:system",
     "python-envs.pythonProjects": [],
